2002-06-26  Mikhael Goikhman  <migo@homemail.com>

	* **/*.c:
	tabify only the leading spaces, untabify the middle of line

2002-06-25  David Fries  <dfries@mail.win.org>

	* fvwm/fvwm.1:
	* fvwm/windowlist.c:
	Added code to sort based on the class name of a window for
	the WindowList function.

2002-06-25  olicha  <olivier.chapuis@free.fr>

	* acinclude.m4:
	A minor fix

2002-06-25  Mikhael Goikhman  <migo@homemail.com>

	* AUTHORS:
	add Anders Andersson (spelling fixes in all man pages) and Steve Talley

2002-06-24  Steve Talley  <stephen.talley@sun.com>

	* fvwm/add_window.c:
	* fvwm/add_window.h:
	* fvwm/fvwm.1:
	* fvwm/fvwm.h:
	* fvwm/icons.c:
	* fvwm/icons.h:
	* fvwm/style.c:
	* fvwm/style.h:
	* libs/defaults.h:
	New Style option IconSize

2002-06-24  Mikhael Goikhman  <migo@homemail.com>

	* NEWS, configure.in:
	changed version to 2.5.3

2002-06-24  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	removed C++ section

	* fvwm/fvwm.1:
	* libs/FlocaleCharset.c:
	small fixes

2002-06-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (WaitForButtonsUp):
	use the wait cursot only after the 20th pass through the loop

2002-06-21  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1 (Examples): Language check.
	PipeRead as synchronous Exec.
	Better example for PipeRead.

2002-06-21  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1:
	* NEWS:
	Documented StringEncoding= in font name

	* INSTALL.fvwm
	Removed --disable-compound-text doc

2002-06-20  olicha  <olivier.chapuis@free.fr>

	* libs/FBidi.h (FBidiConvert):
	Fixed compile if !HAVE_BIDI

2002-06-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.c (InitVariables):
	(StartupStuff):
	Allocate colorset 0 in InitVariable in the place of StartupStuff.
	This fix a "null expression" at init in menustyle.c (menustyle_update)

2002-06-19  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	reworded supported feature listing, fixed the default xft detection
	* INSTALL.fvwm: